<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Music</string>
    <string name="welcome">欢迎登陆</string>
    <string name="LoginBt">登陆</string>
    <string name="goRegister"><![CDATA[快速注册>]]></string>
    <string name="LoginDes">登陆代表您确认并同意</string>
    <string name="LoginDes2">《用户协议》</string>
    <string name="phoneLogin">手机号登录</string>
    <string name="forgetPwd">忘记密码？</string>
    <string name="userInfo">个人信息</string>
    <string name="touxiang">头像</string>
    <string name="ningcheng">昵称</string>
    <string name="qianming">个人签名</string>
    <string name="xingbie">性别</string>
    <string name="shengri">生日</string>
    <string name="diqu">地区</string>
    <string name="xingquxiang">性取向</string>
    <string name="hunlian">婚恋</string>
    <string name="jiaoyouyixiang">交友意向</string>
    <string name="wallet_des">*民谣官方代理，极速到账，交易无忧*</string>
    <string name="wallet_des_details">代理匹配成功后，请使用自助充值，获取最新的收款账 号后进行转账，切勿对历史收款账号转账，以免您的资 金收到损失。</string>
    <string name="wallet_question">问题反馈</string>
    <string name="wallet_top_up">确认充值</string>
    <string name="wallet_detail">明细</string>
    <string name="wallet_balance">余额</string>
    <string name="title_mylive">我的直播</string>
    <string name="live_history">观看记录</string>
    <string name="live_gift">礼物明细</string>
    <string name="live_host">主播认证</string>
    <string name="live_levl">我的等级</string>
    <string name="my_equity">观影权益</string>
    <string name="my_equityNum">今日剩余观影次数</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_live">我的直播</string>
    <string name="my_share">分享给ta</string>
    <string name="my_community">社区交流群</string>
    <string name="my_about">关于我们</string>
    <string name="my_feedback">意见反馈</string>
    <string name="my_history">浏览记录</string>
    <string name="my_like">我的点赞</string>
    <string name="my_comment">我的评论</string>
    <string name="my_message">消息通知</string>
    <string name="my_exchange">兑换专区</string>
    <string name="my_focus">关注</string>
    <string name="my_fans">粉丝</string>
    <string name="my_publish">发布</string>
    <string name="my_collection">收藏</string>
    <string name="setting">设置</string>
    <string name="setting_Loginback">退出登录</string>
    <string name="setting_personMessage">个人信息</string>
    <string name="setting_accoutSecurity">账号安全</string>
    <string name="setting_lockScreen">锁屏密码</string>
    <string name="setting_language">设置语言</string>
    <string name="setting_clearCache">清理缓存</string>
    <string name="setting_version">版本信息</string>
    <string name="setting_backlist">黑名单</string>
    <string name="setting_aboutOur">关于我们</string>
    <string name="setting_lockDes">开启后防止他人未经授权查看APP</string>
    <string name="setting_language_china">简体中文</string>
    <string name="live_exchangeZone">兑换专区</string>
    <string name="exchange_sure">确认兑换</string>
    <string name="exchange_put">请输入兑换码</string>
    <string name="focus_tab1">关注的人</string>
    <string name="focus_tab2">关注的圈子</string>
    <string name="fans_title">粉丝</string>
    <string name="collection_title">我的收藏</string>
    <string name="message_title">我的消息</string>
    <string name="message_set">设置</string>
    <string name="message_system">系统消息</string>
    <string name="message_interactive">互动消息</string>
    <string name="message_notice">通知公告</string>
    <string name="message_audit">帖子审核</string>
    <string name="message_violations">违规处罚</string>
    <string name="message_feedback">意见反馈与回复</string>
    <string name="message_commend">评论与回复</string>
    <string name="message_notice_system">系统公告</string>
    <string name="like_title">我赞过的帖子</string>
    <string name="history_title">浏览记录</string>
    <string name="history_clear">清除</string>
    <string name="community_title">反馈类型</string>
    <string name="community_history">历史反馈</string>
    <string name="community_advice"><![CDATA[给社区建议 >]]></string>
    <string name="community_report"><![CDATA[我要举报 >]]></string>
    <string name="userdetail_editor">编辑</string>
    <string name="community_put">发表</string>
    <string name="community_et_feed">请用10-200字描述给社区的建议</string>
    <string name="community_contact">手机、邮箱等联系方式</string>
    <string name="community_hint">填写联系方式有助于我们沟通和解决问题。</string>
    <string name="community_advice_item">给社区建议</string>
    <string name="dynamic">动态</string>
    <string name="video">视频</string>
    <string name="archives">档案</string>
    <string name="setting_language_Taiwan">繁体中文</string>
    <string name="lock_text">设置您的密码</string>
    <string name="lock_toast">请再绘制一次</string>
    <string name="lock_error">密码错误请重新绘制</string>
    <string name="lock_open">请绘制您的密码解锁</string>
    <string name="friend_focus">关注</string>
    <string name="friend_paper">帖子</string>
    <string name="friend_more">更多</string>
    <string name="detail_post">发送</string>
    <string name="detail_comment">请输入您想说的</string>
    <string name="friend_detail">详情</string>
    <string name="put_art">发布</string>
    <string name="chose_friend">选择圈子</string>
    <string name="chose_des">能获得更多的赞和评论></string>
    <string name="put_content_hint">标题：4-50字（必填）</string>
    <string name="null_sign">添加标签优先审核</string>
    <string name="detail">详情</string>
    <string name="detail_des">圈子详情</string>
    <string name="detail_icon">圈子ICON</string>
    <string name="detail_name">圈子名称</string>
    <string name="detail_type">所属分类</string>
    <string name="account">账号安全</string>
    <string name="account_name">账号</string>
    <string name="phone_bind">手机号绑定</string>
    <string name="change_pas">修改密码</string>
    <string name="integral">积分</string>
    <string name="task_share">推广任务</string>
    <string name="today_share">日常任务</string>
    <string name="task">任务中心</string>
    <string name="text_hint">仅显示前20位最近活跃用户</string>
    <string name="please_pwd">请输入密码</string>
    <string name="please_username">请输入账号</string>
    <string name="please_phone">请输入手机号码</string>
    <string name="get_code">获取验证码</string>
    <string name="RegisterDes">注册表示您确认自身满18周岁并同意</string>
    <string name="RegisterBt">下一步</string>
    <string name="find_pwd">找回密码</string>
    <string name="forget_pwd">忘记登录密码？</string>
    <string name="forget_pwd_2">通过绑定的手机号找回</string>
    <string name="register">快速注册</string>
    <string name="please_code">请输入验证码</string>
    <string name="again_pwd">设置密码</string>
    <string name="one_pwd">输入密码</string>
    <string name="two_pwd">确认密码</string>
    <string name="one_pwd_six">请至少输入6个字符</string>
    <string name="please_pwd_again">请再次输入密码</string>
    <string name="sure">确定</string>
    <string name="come">来吧，尽情发挥。。</string>
    <string name="chose_sign">选择标签</string>
    <string name="chose_sign_press">已选标签</string>
    <string name="chose_sign_des">亲，添加标签除享受优先审核特权外，同时可获得更多经验值和积分。（最多可添加6个标签））</string>
    <string name="gologin">立即登录</string>
    <string name="look_one">只看楼主</string>
    <string name="newhot">最新</string>
    <string name="focus">+关注</string>
    <string name="comment_des">说点什么吧</string>
    <string name="money_detail">收支明细</string>
    <string name="put_content_hint2">填写合适的标题，能让更多的人看到（4-50字））</string>
    <string name="jubao">动态举报</string>
    <string name="video_loading_failed">视频加载失败</string>
    <string name="click_to_replay">重新加载</string>
    <string name="cn_replay">重试</string>
</resources>
