<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".View.Activity.Login.LoginActivity">

    <TextView
        android:id="@+id/login_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp" />
    <TextView
        android:id="@+id/login_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="#030303"
        android:textSize="24sp"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="29dp"
        android:text="@string/welcome"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="15dp"
        android:src="@drawable/back_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"/>
    <EditText
        android:id="@+id/login_userName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@null"
        android:paddingLeft="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/login_2"
        android:layout_marginTop="60dp"
        android:hint="@string/please_username"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E3E3E3"
        app:layout_constraintTop_toBottomOf="@id/login_userName"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <EditText
        android:id="@+id/login_userPwd"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@null"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/login_userName"
        android:hint="@string/please_pwd"/>
    <View
        android:id="@+id/login_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E3E3E3"
        app:layout_constraintTop_toBottomOf="@id/login_userPwd"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/login_normal"
        app:layout_constraintTop_toBottomOf="@id/login_3"
        android:text="@string/LoginBt"/>
    <TextView
        android:id="@+id/phone_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="17dp"
        android:text="@string/phoneLogin"/>
    <TextView
        android:id="@+id/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        android:layout_marginTop="17dp"
        android:layout_marginRight="30dp"
        android:text="@string/forgetPwd"/>
    <TextView
        android:id="@+id/register_fast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="67dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="14sp"
        android:textColor="#D02D2D"
        android:text="@string/goRegister"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginDes"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#4792E0"
            android:text="@string/LoginDes2"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>