<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.Activity.MyChildActivity.My.MymessageActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="5dp"
            android:src="@drawable/icon_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="#030303"
            android:text="@string/message_title"/>
        <TextView
            android:id="@+id/message_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666666"
            android:text="@string/message_set"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="10dp"
        android:text="@string/message_system"/>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/message_audit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/my_icon11"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="13dp"
            android:layout_margin="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/icon_post_review" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/my_icon11"
            android:textSize="16sp"
            android:textColor="#333333"
            android:text="@string/message_audit"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/icon_next"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/message_violations"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/my_icon12"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="13dp"
            android:src="@drawable/icon_penalties_violations"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/my_icon12"
            android:textSize="16sp"
            android:textColor="#333333"
            android:text="@string/message_violations"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/icon_next"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/message_feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/my_icon15"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="13dp"
            android:src="@drawable/icon_sugest_reply"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/my_icon15"
            android:textSize="16sp"
            android:textColor="#333333"
            android:text="@string/message_feedback"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/icon_next"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="10dp"
        android:text="@string/message_interactive"/>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/message_commend"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/my_icon13"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="13dp"
            android:src="@drawable/icon_pinglun_huifu"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/my_icon13"
            android:textSize="16sp"
            android:textColor="#333333"
            android:text="@string/message_commend"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/icon_next"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="10dp"
        android:text="@string/message_notice"/>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/message_notice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/my_icon14"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="13dp"
            android:src="@drawable/icon_system_message"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/my_icon14"
            android:textSize="16sp"
            android:textColor="#333333"
            android:text="@string/message_notice_system"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/icon_next"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>