<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.Activity.MyChildActivity.My.MyexchangeActivity">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:layout_marginBottom="1dp">
        <ImageView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="5dp"
            android:src="@drawable/icon_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/live_exchangeZone"
            android:textSize="18sp"
            android:textColor="#030303" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#333333"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white">
        <EditText
            android:id="@+id/exchange_Code"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:background="@drawable/exchange_code"
            android:hint="@string/exchange_put"/>
        <Button
            android:id="@+id/exchange"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"
            android:text="@string/exchange_sure"
            android:textSize="16sp"
            android:background="@drawable/exchange_makesure"/>
    </LinearLayout>

</LinearLayout>